--- a/templates/dashboard/supplier/invoice_show.html.twig
+++ b/templates/dashboard/supplier/invoice_show.html.twig
@@ -3,10 +3,20 @@
 {% block content %}
     <div class="p-10 space-y-3">
         <p>Nom de la mission: {{ invoice.supplierMission.name }}</p>
-        <p>Facture liée : {{ invoice.invoiceMission.billNum ?? null }}</p>
+        <p>Facture liée :
+            {% if invoice.invoiceMission.billNum ?? '' != null %}
+                <a href="{{ path('dashboard_mission_invoice_show', {id: invoice.invoiceMission.mission.id, invoiceId: invoice.invoiceMission.id}) }}" class="underline opacity-75 hover:opacity-100">
+                    {{ invoice.invoiceMission.billNum }}
+                </a>
+            {% endif %}
+        </p>
         <p>Numéro de facture : {{ invoice.billNum }}</p>
         <p>Type : {{ invoice.type }}</p>
-        <p>Nom de la facture : {{ invoice.realFilename }}</p>
+        <p>Nom de la facture :
+            <a href="{{ path('dashboard_supplier_invoice_show_invoice', {id: mission.id, invoiceId: invoice.id, name: invoice.realFilename}) }}" target="_blank" class="underline opacity-75 hover:opacity-100">
+                {{ invoice.realFilename|length > 30 ? invoice.realFilename|slice(0, 30) ~ '...' : invoice.realFilename }}
+            </a>
+        </p>
         <p>Prix unitaire : {{ invoice.price|number_format(2, ',', ' ') }}€</p>
         <p>Quantité : {{ invoice.quantity|number_format(2, ',', ' ') }} {{ invoice.unit }}</p>
         <p>Total HT : {{ invoice.totalHT|number_format(2, ',', ' ') }}€</p>
@@ -14,7 +24,26 @@
         <p>Total TTC : {{ invoice.totalTTC|number_format(2, ',', ' ') }}€</p>
         <p>Typologie de paiement : {{ invoice.paymentTypology }}</p>
         <p>Date d'émission de la facture : {{ invoice.issueDate|date('d/m/Y') }}</p>
-        <p>Date limite de paiement de la facture : {{ invoice.deadline|date('d/m/Y') }}</p>
+        <p>Date limite de paiement de la facture : {{ invoice.deadline|date('d/m/Y') }}
+            {% if invoice.deadline %}
+                {% if not invoice.paid %}
+                    ,
+                    {% set remainingDays = (invoice.deadline|date('U') - 'now'|date('U')) / (60 * 60 * 24) %}
+                    {% if remainingDays > 0 %}
+                        <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
+                            Temps restant : {{ remainingDays|round(0, 'floor') + 1 }} jour{{ remainingDays > 1 ? 's' : '' }}
+                        </td>
+                    {% else %}
+                        {% set daysLate = ('now'|date('U') - invoice.deadline|date('U')) / (60 * 60 * 24) %}
+                        <td class="whitespace-nowrap px-6 py-4 text-red-500 bg-gray-200">
+                            Retard de {{ daysLate|round(0, 'floor') + 1 }} jour{{ daysLate > 1 ? 's' : '' }}
+                        </td>
+                    {% endif %}
+                {% endif %}
+            {% else %}
+                <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">Date limite non définie</td>
+            {% endif %}
+        </p>
         <p>Payé ? :
             {% if invoice.paid == true %}
                 <span style="color: green">Oui</span>
